--- a/.github/workflows/login.yaml
+++ b/.github/workflows/login.yaml
@@ -28,9 +28,9 @@ jobs:
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
-          pip install playwright aiofiles requests
+          pip install -r requirements.txt
 
-      - name: Install Playwright Browsers  # 安装浏览器
+      - name: 安装 Playwright 浏览器
         run: |
           playwright install
 
