--- a/.github/workflows/login.yaml
+++ b/.github/workflows/login.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: 安装 Playwright 浏览器
         run: |
-          playwright install
+          playwright install --with-deps
 
       - name: 运行登录脚本
         env:
