--- a/.github/workflows/login.yaml
+++ b/.github/workflows/login.yaml
@@ -21,17 +21,21 @@ jobs:
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
-          pip install playwright requests aiofiles
+          pip install playwright
 
       - name: 安装 Playwright 浏览器
-        run: |
-          playwright install --with-deps
+        run: playwright install --with-deps
 
       - name: 运行登录脚本
         env:
           LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
           LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          python login_script.py
+        run: python login_script.py
+
+      - name: 上传错误截图（如果有）
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: error-screenshots
+          path: |
+            *.png
